# Sales_Bronchure_Generator

./: README.md  main.py  pyproject.toml  requirements.txt
app/: bronchure.ipynb  extractor.py  links_extractor.py
